--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "emoji-picker-react": "^4.12.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.432.0",
+    "moment": "^2.30.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,6 +32,7 @@
     "react-icons": "^5.3.0",
     "react-lottie": "^1.2.4",
     "react-router-dom": "^6.26.1",
+    "socket.io-client": "^4.8.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
