--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "emoji-picker-react": "^4.12.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.432.0",
